--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=
 category=Device Control
 url=https://github.com/dejwk/roo_comms
 architectures=*
-depends=roo_collections,roo_io,roo_led,roo_logging,roo_prefs,roo_scheduler,roo_time,roo_transceivers
+depends=roo_collections,roo_io,roo_blink,roo_logging,roo_prefs,roo_scheduler,roo_time,roo_transceivers
