Updated dependencies and added CI.

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=roo_comms
-version=1.0.0
+version=1.0.1
 author=Dejwk <dejwk.oss@gmail.com>
 maintainer=Dejwk <dejwk.oss@gmail.com>
 sentence=Home automation using ESP-NOW.
@@ -7,4 +7,4 @@ paragraph=
 category=Device Control
 url=https://github.com/dejwk/roo_comms
 architectures=*
-depends=roo_collections,roo_io,roo_blink,roo_logging,roo_prefs,roo_scheduler,roo_time,roo_transceivers
+depends=roo_blink,roo_collections,roo_control,roo_io,roo_logging,roo_prefs,roo_scheduler,roo_threads,roo_time,roo_transceivers
