--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,17 +1,18 @@
 module(name = "roo_comms", version = "1.1.3")
 
-bazel_dep(name = "roo_testing", version = "1.2.0")
+bazel_dep(name = "rules_cc", version = "0.2.16")
+bazel_dep(name = "roo_testing", version = "1.2.1")
 bazel_dep(name = "googletest", version = "1.17.0")
 
 bazel_dep(name = "nanopb", version = "0.4.9.1.bcr.2")
 
-bazel_dep(name = "roo_blink", version = "1.0.4")
-bazel_dep(name = "roo_collections", version = "1.4.0")
-bazel_dep(name = "roo_control", version = "1.2.3")
-bazel_dep(name = "roo_io", version = "2.1.1")
-bazel_dep(name = "roo_logging", version = "1.5.1")
-bazel_dep(name = "roo_prefs", version = "1.2.7")
-bazel_dep(name = "roo_scheduler", version = "2.1.6")
-bazel_dep(name = "roo_threads", version = "1.2.0")
-bazel_dep(name = "roo_time", version = "1.4.0")
+bazel_dep(name = "roo_blink", version = "1.0.5")
+bazel_dep(name = "roo_collections", version = "1.4.1")
+bazel_dep(name = "roo_control", version = "1.2.4")
+bazel_dep(name = "roo_io", version = "2.1.4")
+bazel_dep(name = "roo_logging", version = "1.5.3")
+bazel_dep(name = "roo_prefs", version = "1.2.8")
+bazel_dep(name = "roo_scheduler", version = "2.1.7")
+bazel_dep(name = "roo_threads", version = "1.2.1")
+bazel_dep(name = "roo_time", version = "1.4.1")
 bazel_dep(name = "roo_transceivers", version = "1.1.4")
