--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,7 +2,7 @@ module(name = "roo_comms", version = "1.1.4")
 
 bazel_dep(name = "rules_cc", version = "0.2.17")
 bazel_dep(name = "roo_testing", version = "1.3.4")
-bazel_dep(name = "googletest", version = "1.17.0")
+bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
 
 bazel_dep(name = "nanopb", version = "0.4.9.1.bcr.2")
 
